- Fixed version check for dependencies in release projects, solving 3240436 - Fixes for OTP application dependency resolutions, solving 3240233